<resources>
    <string name="app_name">FoodAPP</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_or">Ou</string>
    <string name="text_entrar">Entrar</string>
    <string name="text_registrar">Registrar</string>
    <string name="text_esqueceu_senha">Esqueceu sua senha?</string>
    <string name="text_insira_email_ou_usuario">Insira seu email ou usuário</string>
    <string name="text_insira_senha">Insira sua senha</string>
    <string name="text_confirmar_senha">Confirme sua senha</string>
    <string name="text_open">Menu aberto</string>
    <string name="text_close">Menu fechado</string>
</resources>